fix link to funcy package

--- a/_posts/2019/07/2019-07-27-currying.markdown
+++ b/_posts/2019/07/2019-07-27-currying.markdown
@@ -19,7 +19,7 @@ tags:
 > Каррирование (от англ. currying, иногда — карринг) — преобразование функции от многих аргументов в набор функций, каждая из которых является функцией от одного аргумента. Возможность такого преобразования впервые отмечена в трудах Готтлоба Фреге, систематически изучена Моисеем Шейнфинкелем в 1920-е годы, а наименование получило по имени Хаскелла Карри — разработчика комбинаторной логики, в которой сведение к функциям одного аргумента носит основополагающий характер.
 > - Wikipedia
 
-Для магии я буду использовать пакет [funcy]([funcy](https://github.com/Suor/funcy)) и функцию [curry](https://funcy.readthedocs.io/en/stable/funcs.html#curry).
+Для магии я буду использовать пакет [funcy](https://github.com/Suor/funcy) и функцию [curry](https://funcy.readthedocs.io/en/stable/funcs.html#curry).
 
 #### Синопсис:
 
